k8s/manifests/infrastructure/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kecloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.5
          resources:
            requests:
              memory: '512Mi'
              cpu: '250m' # 25% of a core
            limits:
              memory: '1Gi' # Strict cap to save your host OS
              # cpu: '1000m' # 1 full core (needed for fast startup)
          ports:
            - containerPort: 8080
          # args: ['start-dev']
          command:
            - '/bin/sh'
            - '-c'
            - '/opt/keycloak/bin/kc.sh build && /opt/keycloak/bin/kc.sh start --optimized --hostname-strict=false --http-enabled=true'
      volumes:
        - name: keycloak-realm
          configMap:
            name: keycloak-realm-config
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
