k8s/manifests/infrastructure/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:8.3.2
          resources:
            requests:
              memory: '384Mi'
              cpu: '100m'
            limits:
              memory: '512Mi' # Caps it so it never steals your free RAM
              cpu: '100m' # Caps it at 50% of a single core
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
    - name: 27017-27017
      port: 27017
      protocol: TCP
      targetPort: 27017
