k8s/manifests/infrastructure/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.4.9
          # Savior for low-spec laptops: drops RAM usage significantly
          args: ['--performance-schema=OFF']
          ports:
            - containerPort: 3306
          resources:
            requests:
              memory: '384Mi' # Minimum it needs to boot comfortably
              cpu: '100m' # 10% of a single CPU core
            limits:
              memory: '512Mi' # Caps it so it never steals your free RAM
              cpu: '500m' # Caps it at 10% of a single core
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
            - mountPath: /docker-entrypoint-initdb.d
              name: mysql-init
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
        - name: mysql-init
          configMap:
            name: mysql-initdb-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  ports:
    - name: 3306-3306
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
